<resources>
    <string name="app_name">Cinema Management App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_not_account">You do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_user">Sign up</string>
    <string name="have_account">You have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="reset_password">Send password</string>

    <string name="nav_home">Home page</string>
    <string name="nav_booking">Booking History</string>
    <string name="nav_user">Account</string>

    <!--Admin-->
    <string name="nav_admin_category">Type</string>
    <string name="nav_admin_food_drink">Food/Drink</string>
    <string name="nav_admin_movie">Movie</string>
    <string name="nav_admin_booking">History</string>
    <string name="nav_admin_manage">Management</string>

    <string name="hint_search_movie">Movie name…</string>
    <string name="hint_password_old">Old password…</string>
    <string name="hint_password_new">New password…</string>
    <string name="hint_password_confirm">Confirm new password…</string>
    <string name="hint_name">Name…</string>
    <string name="hint_id">ID…</string>
    <string name="hint_price">Price…</string>
    <string name="hint_quantity">Quantity…</string>
    <string name="hint_description">Description…</string>
    <string name="hint_image">Image link…</string>
    <string name="hint_image_banner">Banner link…</string>
    <string name="hint_url">Video link…</string>
    <string name="hint_date">End date…</string>

    <string name="waiting_message">Please wait…</string>
    <string name="sign_in_user">User Sign In</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="change_password">Change password</string>
    <string name="report">Revenue report</string>
    <string name="sign_out">Sign out</string>
    <string name="history_booking">Booking history</string>

    <string name="add_food_title">Add Food/Drink</string>
    <string name="edit_food_title">Edit Food/Drink</string>
    <string name="currency">000 VNĐ</string>
    <string name="currency_movie">000 VNĐ / 1 ticket</string>
    <string name="date_movie">End date:</string>
    <string name="price_movie">Ticket price:</string>
    <string name="name_movie">Movie name:</string>
    <string name="room_movie">Movie room:</string>
    <string name="time_movie">Movie time:</string>
    <string name="add_movie_title">Add new movie</string>
    <string name="edit_movie_title">Edit movie information</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="all_room">All rooms </string>
    <string name="all_time">All time slots </string>
    <string name="watch_trailer">Watch Trailer </string>
    <string name="description_movie">Movie Description</string>
    <string name="infor_movie">Movie Information </string>
    <string name="video_trailer">Video Trailer </string>
    <string name="select_room">Select movie room</string>
    <string name="select_time">Select movie time</string>
    <string name="select_food">Select food / drink</string>
    <string name="count_booking">Total number of booked tickets</string>
    <string name="hint_count_booking">Number of booked tickets…</string>
    <string name="booking">Book ticket</string>
    <string name="count">Quantity</string>
    <string name="confirm_booking_infor">Confirm booking information</string>
    <string name="movie_name">Movie Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_id">Movie id:</string>
    <string name="count_booking_label">Number of tickets:</string>
    <string name="count_seat_label">Selected seat(s):</string>
    <string name="food_drink_label">Food/drink:</string>
    <string name="total_amount_label">Total price:</string>
    <string name="select_seat_label">Select seat</string>
    <string name="main_screen">Main screen</string>
    <string name="label_quantity">Quantity</string>
    <string name="add_category_title">Add new category</string>
    <string name="edit_category_title">Edit category</string>
    <string name="select_category">Select category (*)</string>
    <string name="label_category">Category:</string>
    <string name="category">Category</string>
    <string name="label_all_movies">All the movies</string>
    <string name="label_movie_popular">Most popular movie</string>
    <string name="label_list_category">Movie type</string>
    <string name="label_all">All</string>
    <string name="confirm_booking">Booking Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="payment_method">Payment Method</string>
    <string name="label_payment">Payment:</string>
    <string name="label_date_create">Date:</string>
    <string name="quantity_stock">Current quantity:</string>
    <string name="request_qr">QR Code scanning:</string>
    <string name="revenue">Revenue</string>
    <string name="label_total_revenue">Total Revenue:</string>
    <string name="column_stt">STT</string>
    <string name="column_movie_name">Movie name</string>
    <string name="column_quantity">Ticket quantity</string>
    <string name="column_total_amount">Total</string>
    <string name="label_booking_used">Used Ticket</string>
    <string name="label_confirm_booking">Ticket Confirmation</string>

    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>


    <string name="msg_confirm_login_another_device">Are you sure you want to exit this application ?</string>
    <string name="msg_email_require">Please enter your email address</string>
    <string name="msg_password_require">Please enter your password</string>
    <string name="msg_old_password_require">Please enter your old password</string>
    <string name="msg_new_password_require">Please enter your new password</string>
    <string name="msg_confirm_password_require">Please confirm your new password</string>
    <string name="msg_old_password_invalid">Your old password is incorrect, please enter again</string>
    <string name="msg_confirm_password_invalid">Your new password does not match</string>
    <string name="msg_new_password_invalid">Your new password must be different from your old one</string>
    <string name="msg_change_password_successfully">Change password successfully</string>
    <string name="msg_reset_password_successfully">Reset password successfully, please check your email</string>
    <string name="msg_email_invalid">Invalid email, please enter again</string>
    <string name="msg_email_invalid_admin">Email for admin must have a format …@admin.com</string>
    <string name="msg_email_invalid_user">Invalid email format for user</string>
    <string name="msg_sign_up_error">Unable to register, please try again</string>
    <string name="msg_sign_in_error">Unable to sign in, please try again</string>
    <string name="msg_name_food_require">Please enter food/drink name</string>
    <string name="msg_price_food_require">Please enter food/drink price</string>
    <string name="msg_quantity_food_require">Please enter food/drink price</string>
    <string name="msg_add_food_successfully">Add food/drink successfully</string>
    <string name="msg_delete_title">Delete confirmation</string>
    <string name="msg_confirm_delete">Are you sure you want to delete this section?</string>
    <string name="msg_delete_food_successfully">Delete food/drink successfully</string>
    <string name="msg_edit_food_successfully">Edit food/drink successfully</string>
    <string name="msg_name_category_require">Please enter category name</string>
    <string name="msg_image_category_require">Please enter category image link</string>
    <string name="msg_edit_category_successfully">Edit category successfully</string>
    <string name="msg_add_category_successfully">Add new category successfully</string>
    <string name="msg_delete_category_successfully">Delete category successfully</string>
    <string name="msg_count_invalid">The quantity is not enough for you to purchase</string>
    <string name="msg_payment_error">Error in making payment, please try again !!!</string>
    <string name="msg_movie_date_invalid">Invalid movie released date, please choose a different movie !!!</string>
    <string name="msg_confirm_booking_success">Confirm booking successfully !!!</string>

    <string name="msg_add_movie_successfully">Add new movie successfully</string>
    <string name="msg_delete_movie_successfully">Delete movie successfully</string>
    <string name="msg_edit_movie_successfully">Edit movie successfully</string>

    <string name="msg_category_movie_require">Please choose a movie category</string>
    <string name="msg_name_movie_require">Please enter movie name</string>
    <string name="msg_description_movie_require">Please enter movie description</string>
    <string name="msg_price_movie_require">Please enter movie price</string>
    <string name="msg_date_movie_require">Please enter movie released date</string>
    <string name="msg_image_movie_require">Please enter movie image link</string>
    <string name="msg_image_banner_movie_require">Please enter movie banner link</string>
    <string name="msg_video_movie_require">Please enter movie video link</string>
    <string name="msg_select_room_require">Please select movie room</string>
    <string name="msg_select_time_require">Please select movie time</string>
    <string name="msg_booking_movie_success">Book ticket successfully</string>
    <string name="msg_count_seat">Please choose the seats that you want to book</string>
    <!-- New message -->
    <string name="msg_duplicate_category_name">Already existed a category with the same name</string>
    <string name="msg_duplicate_food_name">Already existed a food/drink with the same name</string>
    <string name="msg_duplicate_movie_name">Already existed a movie with the same name</string>
    <string name="ticket_price">100 000 VND / 1 ticket</string>
    <string name="minimum_price">The minimum price must be equal or above 20 000 VND</string>
    <string name="minimum_quantity">The minimum quantity must be greater than 0</string>
    <string name="category_with_movie">Unable to delete this category because there are movies belong to this category</string>
    <string name="food_booked">Unable to delete this food because it was ordered</string>
    <string name="movie_booked">Unable to delete this movie because it was booked</string>

    <string name="msg_special_char_category_name">Category name must not contain special characters</string>
    <string name="msg_special_char_food_drink_name">Food/drink name must not contain special characters</string>
    <string name="maximum_price">The maximum price must be less than 1 000 000 VND</string>
    <string name="maximum_quantity">The maximum quantity must be less than 10 000</string>
    <string name="msg_special_char_movie_name">Movie name must not contain special characters</string>


    <string name="new_nav_home">Home</string>
    <string name="new_nav_booking_history">Booking History</string>
    <string name="new_nav_user">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>